Fix subtitle spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -157,7 +157,6 @@ h4 {
 
 #rotating-attribute {
     display: inline-block;
-    margin-left: 5px;
 }
 
 .sub-content {
